--- a/css/main.css
+++ b/css/main.css
@@ -31,4 +31,60 @@ body {
   font-family: var(--ff-primary);
   font-weight: var(--font-weight);
   font-size: var(--font-size);
+  line-height: 1.5;
 }
+
+h1,
+h2 {
+  font-weight: 600;
+}
+
+h3,
+h4 {
+  font-weight: 500;
+}
+
+h5 {
+  font-weight: 400;
+}
+
+h1 {
+  line-height: 1.3;
+}
+
+h2,
+h3,
+h4 {
+  line-height: 1.2;
+}
+
+h5 {
+  font-size: 0.8rem;
+}
+
+p {
+  font-size: 0.9rem;
+}
+
+h1,
+h2,
+h4,
+p,
+footer li {
+  margin-bottom: 0.6em;
+}
+
+h3,
+h5 {
+  margin-bottom: 0.8em;
+}
+
+li {
+  list-style: none;
+}
+
+nav li {
+  display: inline-block;
+}
+
+/* Header Styles */
